QueryDSL problems solved